# carrie_cotg

./: .gitignore  CMakeLists.txt  README.md
documentation/: Project_CodeOTG.key
include/: ANSI_sequences.h
src/: ansi_code_process.cpp  carrie.cpp  carrie2.cpp  carrie3.cpp  command.cpp  fifo.h  fifo_reader.c  fifo_writer.c  fromTG.cpp  fromTG_reader.cpp  logger.cpp  logger.hpp  mypty.cpp  mypty2.cpp  mypty3.c  pshm_cleanup.c  pshm_consumer.c  pshm_producer.c  stopwatch.hpp  telegram_writer.cpp  test.cpp  toTG.cpp
